# cannopy

./: CMakeLists.txt  README.md  compile.sh  testpy.py  trace_output.txt
src/include/: ANNLib.h  Adrian.h  NumerLib.h
src/main/: Adrian.cpp  Adrian.h  Adrian_p.h  CMakeLists.txt  PyModule.cpp
src/main/BP/: APPLIC.HLP  CALCPERF.C  GET_CONF.C  HEADER.H  PREPARE2.C  SETUPNN.C
src/main/DEMO_GA/: GA_STRIP.C
src/main/GA/: GA.C  GA.CFG  GA.DEF  G_TYPE.H  SETUPNN.C  STATUTIL.C
src/main/NEURAL/: NEURAL.HPP
src/main/OOPWLD/: BGI.HPP  DIRTREE.HPP  DOSKEY.HPP  FULLBIN.CPP  KEYREAD.CPP  MAKEFILE  POLYGON.CPP  SHAPE.HPP  SHED.CPP  SMAP.CPP
src/main/ann/: CMakeLists.txt
src/main/ann/neuronModel/: CMakeLists.txt  RAMNeuron.cpp  RAMNeuron_p.h
src/main/ann/wisard/: CMakeLists.txt  Wisard.cpp  Wisard_p.h
src/main/kohonen/: CLUSTER.MAN
src/main/numer/: CMakeLists.txt  MathUtils.cpp  MathUtils.h
src/main/old/: Adrian.h  EBP.H  EBPSUB.C  MallocT.cpp  MyFuncs.h  SysFuncs.h
src/main/old/BP/: ALLOCATE.C  APPLIC.CFG  BP.C  BP.CFG  BP.DEF  BP.DOC  BP.HLP  BP.MAK  BP_CONF.C  BP_STRIP.C  MAIN.C  PANDL.C  PRTYPE.H  STATUTIL.C  STRUCT.H  UTILS.C
src/main/old/DEMO_GA/: ALLOCATE.C  APPLIC.CFG  APPLIC.HLP  APPLIC.SUM  APPLIC.TRA  CALCSTAT.C  GA.CFG  GA.TRA  GA_CONF.C  GA_MAIN.C  GET_CONF.C  PANDL.C  PRICE.CUT  PROTO.H  RND_SORT.C  SUM.TRA  T0_ALR.WGT
src/main/old/GA/: APPLIC.CFG  CALCPERF.C  GA.DOC  GA.HLP  GA.MAK  PREPARE.C  UTILS.C
src/main/old/NEURAL/: CONNECTI.CPP  NETWORK.CPP  NEURAL.CPP  NEURAL.DSK  NEURAL.PRJ  NEURAL.RPT  NEURON.CPP  PATTERN.CPP  READ.ME
src/main/old/OOPWLD/: BGI.CPP  CIRCBOX.HPP  CRISPIES.CPP  DIRECT.HPP  DIRECT2.HPP  DIRTEST.CPP  DIRTEST2.CPP  ELLIPSE.CPP  ELLIPSE.HPP  EXMPL1.CPP  FULLBIN.HPP  FULLTEST.CPP  POLYGON.HPP  SHAPE.CPP  SHED.PRJ  SHLIST.CPP  SHLIST.HPP  SMAP.HPP  STARS.CPP  TREETEST.CPP
src/main/old/kohonen/: A.SEQ  B.SEQ  C.SEQ  CLUSTER.C  CLUSTER.H  CRD.CFG  D.SEQ
src/main/old/kohonen/INFOCORP/: A.CRD  B.CRD  C.CRD  D.CRD
src/main/old/kohonen/KOHONEN/: CHRIS.CFG  KNET.CFG  SQ1.CFG  SQUARE.CFG
src/test/: AdrianTest.cpp  CMakeLists.txt  TestUtils.h
src/test/ann/: CMakeLists.txt
src/test/ann/neuronModel/: CMakeLists.txt  RAMNeuronTest.cpp
src/test/ann/wisard/: CMakeLists.txt  WisardTest.cpp
src/test/numer/: CMakeLists.txt  FactorialTest.cpp
src/test/perf/: CMakeLists.txt  VectorVsArrayTest.cpp
